// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Example/Button Large 1`] = `
<button
  className="storybook-button storybook-button--large storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Primary 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--primary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Secondary 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Small 1`] = `
<button
  className="storybook-button storybook-button--small storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Header Logged In 1`] = `
<header>
  <div
    className="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <button
        className="storybook-button storybook-button--small storybook-button--secondary"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Log out
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Header Logged Out 1`] = `
<header>
  <div
    className="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <button
        className="storybook-button storybook-button--small storybook-button--secondary"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Log in
      </button>
      <button
        className="storybook-button storybook-button--small storybook-button--primary"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Sign up
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Page Logged In 1`] = `
<article>
  <header>
    <div
      className="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
        <h1>
          Acme
        </h1>
      </div>
      <div>
        <button
          className="storybook-button storybook-button--small storybook-button--secondary"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
          type="button"
        >
          Log out
        </button>
      </div>
    </div>
  </header>
  <section>
    <h2>
      Pages in Storybook
    </h2>
    <p>
      We recommend building UIs with a
       
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
       
      process starting with atomic components and ending with pages.
    </p>
    <p>
      Render pages with mock data. This makes it easy to build and review page states without needing to navigate to them in your app. Here are some handy patterns for managing page data in Storybook:
    </p>
    <ul>
      <li>
        Use a higher-level connected component. Storybook helps you compose such data from the args of child component stories
      </li>
      <li>
        Assemble data in the page component from your services. You can mock these services out using Storybook.
      </li>
    </ul>
    <p>
      Get a guided tutorial on component-driven development at
       
      <a
        href="https://storybook.js.org/tutorials/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Storybook tutorials
      </a>
      . Read more in the
       
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      .
    </p>
    <div
      className="tip-wrapper"
    >
      <span
        className="tip"
      >
        Tip
      </span>
       Adjust the width of the canvas with the
       
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      Viewports addon in the toolbar
    </div>
  </section>
</article>
`;

exports[`Storyshots Example/Page Logged Out 1`] = `
<article>
  <header>
    <div
      className="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
        <h1>
          Acme
        </h1>
      </div>
      <div>
        <button
          className="storybook-button storybook-button--small storybook-button--secondary"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
          type="button"
        >
          Log in
        </button>
        <button
          className="storybook-button storybook-button--small storybook-button--primary"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
          type="button"
        >
          Sign up
        </button>
      </div>
    </div>
  </header>
  <section>
    <h2>
      Pages in Storybook
    </h2>
    <p>
      We recommend building UIs with a
       
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
       
      process starting with atomic components and ending with pages.
    </p>
    <p>
      Render pages with mock data. This makes it easy to build and review page states without needing to navigate to them in your app. Here are some handy patterns for managing page data in Storybook:
    </p>
    <ul>
      <li>
        Use a higher-level connected component. Storybook helps you compose such data from the args of child component stories
      </li>
      <li>
        Assemble data in the page component from your services. You can mock these services out using Storybook.
      </li>
    </ul>
    <p>
      Get a guided tutorial on component-driven development at
       
      <a
        href="https://storybook.js.org/tutorials/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Storybook tutorials
      </a>
      . Read more in the
       
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      .
    </p>
    <div
      className="tip-wrapper"
    >
      <span
        className="tip"
      >
        Tip
      </span>
       Adjust the width of the canvas with the
       
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      Viewports addon in the toolbar
    </div>
  </section>
</article>
`;

exports[`Storyshots TMS/Buttons Search Button 1`] = `
<button
  className="sc-bdfBQB jVxHia"
  onClick={[Function]}
  type="button"
>
  Искать
</button>
`;

exports[`Storyshots TMS/Buttons Test Button 1`] = `
<button
  className="sc-bdfBQB hozEIt"
  onClick={[Function]}
  type="button"
>
  Test Button
</button>
`;

exports[`Storyshots TMS/Filters Closed Filter 1`] = `
<div
  className="sc-dlfnuX"
>
  <div
    className="sc-eCstlR dmuDrA"
  >
    Курс разработки
  </div>
  <div
    className="sc-hKgJUU cGEjqF"
  >
    <div
      className="sc-jSgvzq fFKiKu"
    >
      Все курсы
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Filters Closed Selected Filter 1`] = `
<div
  className="sc-dlfnuX"
>
  <div
    className="sc-eCstlR dmuDrA"
  >
    Возраст
  </div>
  <div
    className="sc-hKgJUU cGEjqF"
  >
    <div
      className="sc-jSgvzq fFKiKu"
    >
      Любой
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Filters Opened Filter 1`] = `
<div
  className="sc-dlfnuX"
>
  <div
    className="sc-eCstlR dmuDrA"
  >
    Курс разработки
  </div>
  <div
    className="sc-hKgJUU jHZXhu"
  >
    <div
      className="sc-jSgvzq UOvrH"
    >
      Все курсы
    </div>
    <div
      className="sc-gKseQn hpQTjP"
    >
      <button
        className="sc-iBPTik icRoBy"
      >
        Отменить все
      </button>
      <label
        className="sc-fubCzh hEzGCw"
        htmlFor="Front end"
      >
        <input
          checked={true}
          className="sc-pGacB eKbBih"
          id="Front end"
          type="checkbox"
        />
        <div
          className="sc-gsTEea hHzpmx"
        />
        Front end
      </label>
      <label
        className="sc-fubCzh hEzGCw"
        htmlFor="Java"
      >
        <input
          checked={true}
          className="sc-pGacB eKbBih"
          id="Java"
          type="checkbox"
        />
        <div
          className="sc-gsTEea hHzpmx"
        />
        Java
      </label>
      <label
        className="sc-fubCzh hEzGCw"
        htmlFor="Python"
      >
        <input
          checked={true}
          className="sc-pGacB eKbBih"
          id="Python"
          type="checkbox"
        />
        <div
          className="sc-gsTEea hHzpmx"
        />
        Python
      </label>
      <label
        className="sc-fubCzh hEzGCw"
        htmlFor="iOS"
      >
        <input
          checked={true}
          className="sc-pGacB eKbBih"
          id="iOS"
          type="checkbox"
        />
        <div
          className="sc-gsTEea hHzpmx"
        />
        iOS
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Filters Opened Selected Filter 1`] = `
<div
  className="sc-dlfnuX"
>
  <div
    className="sc-eCstlR dmuDrA"
  >
    Возраст
  </div>
  <div
    className="sc-hKgJUU jHZXhu"
  >
    <div
      className="sc-jSgvzq UOvrH"
    >
      Любой
    </div>
    <div
      className="sc-gKseQn hpQTjP"
    >
      <button
        className="sc-iBPTik icRoBy"
      >
        Отменить все
      </button>
      <label
        className="sc-fubCzh hEzGCw"
        htmlFor="меньше 18"
      >
        <input
          checked={true}
          className="sc-pGacB eKbBih"
          id="меньше 18"
          type="checkbox"
        />
        <div
          className="sc-gsTEea hHzpmx"
        />
        меньше 18
      </label>
      <label
        className="sc-fubCzh hEzGCw"
        htmlFor="18-30"
      >
        <input
          checked={true}
          className="sc-pGacB eKbBih"
          id="18-30"
          type="checkbox"
        />
        <div
          className="sc-gsTEea hHzpmx"
        />
        18-30
      </label>
      <label
        className="sc-fubCzh hEzGCw"
        htmlFor="30-45"
      >
        <input
          checked={true}
          className="sc-pGacB eKbBih"
          id="30-45"
          type="checkbox"
        />
        <div
          className="sc-gsTEea hHzpmx"
        />
        30-45
      </label>
      <label
        className="sc-fubCzh hEzGCw"
        htmlFor="больше 45"
      >
        <input
          checked={true}
          className="sc-pGacB eKbBih"
          id="больше 45"
          type="checkbox"
        />
        <div
          className="sc-gsTEea hHzpmx"
        />
        больше 45
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Inputs Default Input 1`] = `
<label
  className="sc-kEjbQP hEGmOH"
>
  <span
    className="sc-iqHYmW euKWpq"
  >
    E-mail
  </span>
  <input
    className="sc-jrAFXE kDVVWm"
    placeholder="Введите e-mail"
    type="email"
  />
</label>
`;

exports[`Storyshots TMS/Inputs Invalid Input 1`] = `
<label
  className="sc-kEjbQP hEGmOH"
>
  <span
    className="sc-iqHYmW cPHQSl"
  >
    Некорректный e-mail
  </span>
  <input
    className="sc-jrAFXE bDOzMj"
    placeholder="Введите e-mail"
    type="email"
    value="ivan@teachmeskills.com"
  />
</label>
`;

exports[`Storyshots TMS/NavbarMenu Navbar 1`] = `
<nav
  className="sc-hiSbEG qYHoo"
>
  <div
    className="sc-gWHigU gfnill"
  />
  <ul
    className="sc-cBNeex bAMtus"
  >
    <li
      className="sc-citxvW cCWXtM"
    >
      <a
        className="sc-jcVcSv bBsmEp"
        href="/resumes"
      >
        Резюме
      </a>
    </li>
    <li
      className="sc-citxvW cCWXtM"
    >
      <a
        className="sc-jcVcSv bBsmEp"
        href="/responses"
      >
        Отклики
      </a>
    </li>
    <li
      className="sc-citxvW cCWXtM"
    >
      <a
        className="sc-jcVcSv bBsmEp"
        href="/bookmarks"
      >
        Избранное
      </a>
    </li>
  </ul>
  <div
    className="sc-bZSRNg dyGfeV"
  >
    <div
      className="sc-bYEvvW hDcynm sc-iUuxjF ghcVLP"
    >
      <div
        className="sc-crrszt cPwjNK"
        onClick={[Function]}
      />
    </div>
    <div
      className="sc-ezredP lfHVXO"
    >
      <div
        className="sc-hBEYId czhIey sc-fFucqa sc-giImIA jgDPPL iLFelu"
        onClick={[Function]}
      >
        <p
          className="sc-fodVek bTnsVF"
        >
          ИИ
        </p>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Storyshots TMS/NotificationCounters Notification Counter Empty 1`] = `
<div
  className="sc-crrszt lgNxvY"
/>
`;

exports[`Storyshots TMS/NotificationCounters Notification Counter One 1`] = `
<div
  className="sc-crrszt cPwjNK"
/>
`;

exports[`Storyshots TMS/NotificationCounters Notification Counter Two 1`] = `
<div
  className="sc-crrszt cnJner"
/>
`;

exports[`Storyshots TMS/Notifications Notifications Empty 1`] = `
<div
  className="sc-bYEvvW hDcynm"
>
  <div
    className="sc-crrszt lgNxvY"
  />
  <div
    className="sc-fKFxtB itIucz sc-kLgnNl fiDvkz"
  >
    <ul
      className="sc-iktFfs chCmYJ"
    >
      <li
        className="sc-jJEKmz dHqLmx"
      >
        "У вас нет новых уведомлений"
      </li>
    </ul>
    <div
      className="sc-bBXrwG kuaEVS"
    />
  </div>
</div>
`;

exports[`Storyshots TMS/Notifications Notifications One 1`] = `
<div
  className="sc-bYEvvW hDcynm"
>
  <div
    className="sc-crrszt cPwjNK"
  />
  <div
    className="sc-fKFxtB itIucz sc-kLgnNl fiDvkz"
  >
    <ul
      className="sc-iktFfs chCmYJ"
    >
      <li
        className="sc-jJEKmz dHqLmx"
      >
        "У вас 5 новых приглашений"
      </li>
    </ul>
    <div
      className="sc-bBXrwG kuaEVS"
    />
  </div>
</div>
`;

exports[`Storyshots TMS/Notifications Notifications Two 1`] = `
<div
  className="sc-bYEvvW hDcynm"
>
  <div
    className="sc-crrszt cnJner"
  />
  <div
    className="sc-fKFxtB itIucz sc-kLgnNl fiDvkz"
  >
    <ul
      className="sc-iktFfs chCmYJ"
    >
      <li
        className="sc-jJEKmz dHqLmx"
      >
        "У вас 59 новых приглашений"
      </li>
      <li
        className="sc-jJEKmz dHqLmx"
      >
        "У вас 63 новых ответов"
      </li>
      <li
        className="sc-jJEKmz dHqLmx"
      >
        "У вас 27 новых отказов"
      </li>
    </ul>
    <div
      className="sc-bBXrwG kuaEVS"
    />
  </div>
</div>
`;

exports[`Storyshots TMS/Search Input Search 1`] = `
<div
  className="sc-dQoVA fzUPDf"
>
  <input
    className="sc-bqyKOL kmogXs"
    placeholder="search"
    type="search"
  />
  <div
    className="sc-kstqJO itEFno"
  />
</div>
`;

exports[`Storyshots TMS/Search Search Closed 1`] = `
<div
  className="sc-iBaQBe cRqPqC"
>
  <div
    className="sc-eggMyH gcMhLE"
  >
    <div
      className="sc-dQoVA fzUPDf"
    >
      <input
        className="sc-bqyKOL kmogXs"
        placeholder="Поиск"
        type="search"
      />
      <div
        className="sc-kstqJO itEFno"
      />
    </div>
    <button
      className="sc-bdfBQB jVxHia sc-bBrNTY jtBoUl"
      type="button"
    >
      ФИЛЬТРЫ
    </button>
    <button
      className="sc-bdfBQB jVxHia"
      type="button"
    >
      Искать
    </button>
  </div>
</div>
`;

exports[`Storyshots TMS/Search Search Opened 1`] = `
<div
  className="sc-iBaQBe cRqPqC"
>
  <div
    className="sc-eggMyH ebozwe"
  >
    <div
      className="sc-dQoVA fzUPDf"
    >
      <input
        className="sc-bqyKOL kmogXs"
        placeholder="Поиск"
        type="search"
      />
      <div
        className="sc-kstqJO itEFno"
      />
    </div>
    <button
      className="sc-bdfBQB jVxHia sc-bBrNTY cUhATe"
      type="button"
    >
      ФИЛЬТРЫ
    </button>
    <button
      className="sc-bdfBQB jVxHia"
      type="button"
    >
      Искать
    </button>
  </div>
  <div
    className="sc-cTkxnA kXiHxS"
  >
    <ul
      className="sc-jNMcJZ dFQlGn"
    >
      <li
        className="sc-dOSRxR"
      >
        <div
          className="sc-dlfnuX"
        >
          <div
            className="sc-eCstlR dmuDrA"
          >
            Курс разработки
          </div>
          <div
            className="sc-hKgJUU cGEjqF"
          >
            <div
              className="sc-jSgvzq fFKiKu"
              onClick={[Function]}
            >
              Все курсы
            </div>
          </div>
        </div>
      </li>
      <li
        className="sc-dOSRxR"
      >
        <div
          className="sc-dlfnuX"
        >
          <div
            className="sc-eCstlR dmuDrA"
          >
            Оценка диплома
          </div>
          <div
            className="sc-hKgJUU cGEjqF"
          >
            <div
              className="sc-jSgvzq fFKiKu"
              onClick={[Function]}
            >
              Все оценки
            </div>
          </div>
        </div>
      </li>
      <li
        className="sc-dOSRxR"
      >
        <div
          className="sc-dlfnuX"
        >
          <div
            className="sc-eCstlR dmuDrA"
          >
            Возраст
          </div>
          <div
            className="sc-hKgJUU cGEjqF"
          >
            <div
              className="sc-jSgvzq fFKiKu"
              onClick={[Function]}
            >
              Любой
            </div>
          </div>
        </div>
      </li>
      <li
        className="sc-dOSRxR"
      >
        <div
          className="sc-dlfnuX"
        >
          <div
            className="sc-eCstlR dmuDrA"
          >
            Английский язык
          </div>
          <div
            className="sc-hKgJUU cGEjqF"
          >
            <div
              className="sc-jSgvzq fFKiKu"
              onClick={[Function]}
            >
              Любой уровень
            </div>
          </div>
        </div>
      </li>
    </ul>
    <button
      className="sc-bdfBQB jVxHia sc-bBrNTY sc-cOajNj cUhATe cThzMM"
      type="button"
    >
      СКРЫТЬ ФИЛЬТРЫ
    </button>
  </div>
</div>
`;

exports[`Storyshots TMS/StudentImages Image In Circle 1`] = `
<div
  className="sc-hBEYId kHoyQd sc-fFucqa duiqvK"
/>
`;

exports[`Storyshots TMS/StudentImages Image On Card 1`] = `
<div
  className="sc-hBEYId kHoyQd"
/>
`;

exports[`Storyshots TMS/StudentImages No Image In Circle 1`] = `
<div
  className="sc-hBEYId czhIey sc-fFucqa jgDPPL"
>
  <p
    className="sc-fodVek bTnsVF"
  >
    ЗФ
  </p>
</div>
`;

exports[`Storyshots TMS/StudentImages No Image On Card 1`] = `
<div
  className="sc-hBEYId czhIey"
>
  <p
    className="sc-fodVek bTnsVF"
  >
    ИИ
  </p>
</div>
`;

exports[`Storyshots TMS/StudentPreviewCard Student Card 1`] = `
<div
  className="sc-Azgjq eHXgDV"
>
  <div
    className="sc-hBEYId czhIey"
  >
    <p
      className="sc-fodVek bTnsVF"
    >
      ИИ
    </p>
  </div>
  <div
    className="sc-hTZgZg lewWOZ"
  >
    <h3
      className="sc-gTgzoy fWvQls"
    >
      Иван
       
      Иванов
    </h3>
    <p
      className="sc-laRQdt fCSoFG"
    >
      Java Developer
    </p>
    <div
      className="sc-iNqMzA esihRi"
    >
      <div
        className="sc-bkzYnD jaHefH"
      >
        Front End
      </div>
      <div
        className="sc-bkzYnD jIsGNL"
      >
        Лучший ученик
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/StudentPreviewCard Student Card Active 1`] = `
<div
  className="sc-Azgjq dPgwHC"
>
  <div
    className="sc-hBEYId kHoyQd"
  />
  <div
    className="sc-hTZgZg lewWOZ"
  >
    <h3
      className="sc-gTgzoy fWvQls"
    >
      Роман
       
      Шашков
    </h3>
    <p
      className="sc-laRQdt fCSoFG"
    >
      Python Developer
      , 25 лет
    </p>
    <div
      className="sc-iNqMzA esihRi"
    >
      <div
        className="sc-bkzYnD jaHefH"
      >
        Back End
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Tags Course Tag 1`] = `
<div
  className="sc-idOiZg bXstnK"
>
  Front End
</div>
`;

exports[`Storyshots TMS/Tags Small Best Student Tag 1`] = `
<div
  className="sc-bkzYnD jIsGNL"
>
  Лучший ученик
</div>
`;

exports[`Storyshots TMS/Tags Small Course Tag 1`] = `
<div
  className="sc-bkzYnD jaHefH"
>
  Front End
</div>
`;

exports[`Storyshots TMS/UserMenu Drop Down Menu 1`] = `
<div
  className="sc-ezredP lfHVXO"
>
  <div
    className="sc-hBEYId czhIey sc-fFucqa sc-giImIA jgDPPL iLFelu"
  >
    <p
      className="sc-fodVek bTnsVF"
    >
      ИИ
    </p>
  </div>
  <div
    className="sc-fKFxtB itIucz sc-iwyWTf hgcDWb"
  >
    <div
      className="sc-cxFLGX gCnYTn"
    >
      Иван
       
      Иванов
    </div>
    <ul
      className="sc-lmoMya fzenoq"
    >
      <li
        className="sc-iJuVqt qbMPG"
      >
        <a
          className="sc-dmlqKv cZXdca"
          href="/user"
        >
          <div
            className="sc-hHfuMS eVTkEb"
          >
            <img
              className="sc-dIUeWJ clvETf"
              src="profile-icon.svg"
            />
          </div>
          <div
            className="sc-kfzBvY jdNCPT"
          >
            ПРОФИЛЬ
          </div>
        </a>
      </li>
      <li
        className="sc-iJuVqt qbMPG"
      >
        <a
          className="sc-dmlqKv cZXdca"
          href="/setting"
        >
          <div
            className="sc-hHfuMS eVTkEb"
          >
            <img
              className="sc-dIUeWJ clvETf"
              src="setting-icon.svg"
            />
          </div>
          <div
            className="sc-kfzBvY jdNCPT"
          >
            НАСТРОЙКИ
          </div>
        </a>
      </li>
      <li
        className="sc-iJuVqt qbMPG"
      >
        <a
          className="sc-dmlqKv cZXdca"
          href="/"
        >
          <div
            className="sc-hHfuMS eVTkEb"
          >
            <img
              className="sc-dIUeWJ clvETf"
              src="sign-out-icon.svg"
            />
          </div>
          <div
            className="sc-kfzBvY jdNCPT"
          >
            ВЫХОД
          </div>
        </a>
      </li>
    </ul>
    <div
      className="sc-bBXrwG kuaEVS"
    />
  </div>
</div>
`;

exports[`Storyshots TMS/UserMenu Menu Item 1`] = `
<a
  className="sc-dmlqKv cZXdca"
  href="/user"
>
  <div
    className="sc-hHfuMS eVTkEb"
  >
    <img
      className="sc-dIUeWJ clvETf"
      src="profile-icon.svg"
    />
  </div>
  <div
    className="sc-kfzBvY jdNCPT"
  >
    ПРОФИЛЬ
  </div>
</a>
`;

exports[`Storyshots Welcome Test Component Example 1`] = `
Array [
  <div>
    helloworld from storybook
  </div>,
  <button
    className="sc-jeGTLq drjZyw"
  >
    Styled Button
  </button>,
]
`;

exports[`Storyshots Welcome Test Component Example Default 1`] = `
Array [
  <div>
    helloworld
  </div>,
  <button
    className="sc-jeGTLq drjZyw"
  >
    Styled Button
  </button>,
]
`;
